--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 28 11:17:48 ICT 2024
-sdk.dir=C\:\\Users\\Acer\\AppData\\Local\\Android\\Sdk
+#Tue Mar 12 04:26:14 ICT 2024
+sdk.dir=D\:\\Android\\sdk
